# rules_rust

./: .gitattributes  MODULE.bazel
.bazelci/: presubmit.yml
.github/workflows/: bazel_test.yaml
cargo/: BUILD.bazel
cargo/private/: BUILD.bazel  cargo_build_script.bzl  cargo_build_script_wrapper.bzl
cargo/private/cargo_build_script_runner/: bin.rs  cargo_manifest_dir.rs  lib.rs
cargo/settings/: BUILD.bazel
cargo/tests/cargo_build_script/cc_args_and_env/: BUILD.bazel  cc_args_and_env_test.bzl
cargo/tests/cargo_build_script/runfiles/: BUILD.bazel  build.rs
cargo/tests/unit/build_script_deps/: build_script_deps.bzl
extensions/prost/private/: BUILD.bazel  prost.bzl
extensions/wasm_bindgen/private/: wasm_bindgen_test.bzl
rust/: BUILD.bazel  extensions.bzl  toolchain.bzl
rust/platform/: BUILD.bazel
rust/private/: BUILD.bazel  providers.bzl  rust.bzl  rust_allocator_libraries.bzl  rust_analyzer.bzl  rustc.bzl  rustdoc.bzl  rustdoc_test.bzl  test_sharding_wrapper.bat  utils.bzl
rust/settings/: BUILD.bazel  settings.bzl
test/: BUILD.bazel  build_script_path_mapping_test.py  build_script_path_mapping_test.sh
test/build_env/: BUILD.bazel
test/build_env/tests/: custom_crate_name.rs
test/unit/lto/: lto_test_suite.bzl
test/unit/pipelined_compilation/: BUILD.bazel  artifact_hash_check.sh  pipelined_compilation_test.bzl  worker_pipelining_nondeterministic_test.sh  wrap.bzl
test/unit/pipelined_compilation/svh_mismatch/: svh_mismatch_consumer.rs  svh_mismatch_test.rs
test/unit/proc_macro/leaks_deps/: cargo_artifact_closure.rs  proc_macro_does_not_leak_deps.bzl  proc_macro_uses_proc_macro.rs
test/unit/proc_macro/leaks_deps/lib/: a_user.rs
test/unit/proc_macro/leaks_deps/nested/: inner_macro.rs  middle_macro.rs  outer_macro.rs
test/unit/remap_path_prefix/: debug_transition.bzl  integration_test.rs
test/unit/rustdoc/: rustdoc_unit_test.bzl
test/unit/sdkroot/: BUILD.bazel  sdkroot_test.bzl
test/unit/test_sharding/: test_sharding.bzl
test/unit/toolchain/: toolchain_test.bzl
test/vscode/: vscode_test_runner.sh
util/process_wrapper/: DESIGN.md  incremental_cache.rs  main.rs  options.rs  pw_args.rs  worker.rs  worker_args.rs  worker_exec.rs  worker_invocation.rs  worker_pipeline.rs  worker_request.rs
util/process_wrapper/private/: bootstrap_process_wrapper.cc
util/process_wrapper/test/: main.rs  worker.rs
