load("@bazel_lib//:bzl_library.bzl", doc_extract_bzl_library = "bzl_library")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
    "toolchain.bzl",
])

toolchain_type(
    name = "toolchain_type",
)

alias(
    name = "toolchain",
    actual = "toolchain_type",
    deprecation = "instead use `@rules_rust//rust:toolchain_type`",
    tags = ["manual"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//rust/platform:bzl_lib",
        "//rust/private:bzl_lib",
        "//rust/settings:bzl_lib",
        "@bazel_features//:features",
    ],
)

doc_extract_bzl_library(
    name = "doc_extract_tests",
    testonly = True,
    srcs = glob(["*.bzl"]),
    deps = [":bzl_lib"],
)
