load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//rust:defs.bzl", "rust_binary")

config_setting(
    name = "compilation_mode_dbg",
    values = {"compilation_mode": "dbg"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "compilation_mode_fastbuild",
    values = {"compilation_mode": "fastbuild"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "compilation_mode_opt",
    values = {"compilation_mode": "opt"},
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "copy_file",
    srcs = ["copy_file.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//rust:bzl_lib",
    ],
)
